fix: remove scrollbar-gutter
* chore: increment package version to 1.0.4

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,6 @@ body {
   padding: 0;
 }
 
-html {
-  scrollbar-gutter: stable;
-}
-
 main {
   max-width: 800px;
   margin: 40px auto;
